# game-rating-prediction

./: .gitignore  README.md  next.config.js  next.config.mjs  package-lock.json  package.json
ns_prediction/: main.ipynb  requirements.txt
prediction/: data_preprocessing.ipynb  data_preprocessing_better.ipynb  pyproject.toml
src/: mdx-components.js
src/app/: layout.js  page.js
src/app/neuronove-site/: page.js
src/app/strojove-uceni/: page.js
src/app/text-mining/: page.js
src/chapters/: analyzaDat.mdx  hello.mdx  predzpracovaniDat.mdx  trenovaniModelu.mdx  uvod.mdx  vyberModelu.mdx  vysledkyAVyhodnoceni.mdx  ziskaniDat.mdx
src/chapters/neuronove-site/: analyzaDat.mdx  predzpracovaniDat.mdx  tvorbaModelu.mdx  uvod.mdx  vysledkyAVyhodnoceni.mdx
src/chapters/strojove-uceni/: analyzaDat.mdx  predzpracovaniDat.mdx  trenovaniModelu.mdx  uvod.mdx  vyberModelu.mdx  vysledkyAVyhodnoceni.mdx  ziskaniDat.mdx
src/chapters/text-mining/: classification.mdx  dataAnalysis.mdx  dataCollection.mdx  dataPreprocessing.mdx  introduction.mdx  (+3 more)
src/components/: ImageWithCaption.jsx  Navigation.jsx  ScrollProgress.jsx
src/hooks/: useScrollPosition.js
src/styles/: main.css  pico.min.css
su_prediction/: data_preprocessing.ipynb  data_preprocessing_better.ipynb  pyproject.toml
text_mining_project/: main.ipynb  main.py  odkazy.txt  pyproject.toml  vysledky_modelu.txt  word2vec.model
text_mining_project/data/: top_game_app_ids.csv  worst_game_app_ids.csv
text_mining_project/new_data/: worst_game_app_ids.csv
text_mining_project/old_data/: top_game_app_ids.csv
