[tool.poetry]
name = "prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
xgboost = "^1.7.5"
imbalanced-learn = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
