[tool.poetry]
name = "text-mining-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = " >=3.9,<3.12"
pandas = "^2.2.2"
nltk = "^3.8.1"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
wordcloud = "^1.9.3"
gensim = "^4.3.2"
scikit-learn = "^1.5.0"
vadersentiment = "^3.3.2"
scipy = "1.10.1"
update = "^0.0.1"
seaborn = "^0.13.2"
matplotlib-venn = "^0.11.10"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
